welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: Unmatched closing brace '}' ignored here
}
^