welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var a=getCouleurSol()
    if(a==Color.green){
      return true
    }else{
      return false
    }
  }
}